--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBC Home</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -30,13 +30,13 @@
         </header>
         <nav class="navbar">
             <ul class="ul">
-                <li class="list"><a href="" class="home">Home</a></li>
-                <li class="list"><a href="">News</a></li>
+                <li class="list"><a href="./index.html" class="home">Home</a></li>
+                <li class="list"><a href="./News/index.html">News</a></li>
                 <li class="list"><a href="">Sports</a></li>
                 <li class="list"><a href="">Bussiness</a></li>
                 <li class="list"><a href="">Innovation</a></li>
                 <li class="list"><a href="">Culture</a></li>
-                <li class="list"><a href="">Travel</a></li>
+                <li class="list"><a href="./travel/index.html">Travel</a></li>
                 <li class="list"><a href="">Earth</a></li>
                 <li class="list"><a href="" class="video">Video</a></li>
                 <li class="list"><a href="">Live</a></li>
@@ -50,7 +50,7 @@
                     <img src="https://ichef.bbci.co.uk/ace/standard/1536/cpsprodpb/12897/production/_132972957_gettyimages-1134057045.jpg.webp"
                         alt="img-1" width="298" height="167">
                     <div class="heading_s">
-                        <h2 class="center_cap"><a href="./index.html">Millions prepare for total solar eclipse in North
+                        <h2 class="center_cap"><a href="/news1/index.html">Millions prepare for total solar eclipse in North
                                 America
                             </a></h2>
                     </div>
@@ -71,7 +71,7 @@
                     <img src="https://ichef.bbci.co.uk/news/480/cpsprodpb/3A97/production/_133099941_gettyimages-2147328267.jpg.webp"
                         alt="img-2" width="298" height="167">
                     <div class="heading_s">
-                        <h2 class="center_cap"><a href="">Ukraine nuclear plant drone strike prompts warning</a></h2>
+                        <h2 class="center_cap"><a href="./news2/index.html">Ukraine nuclear plant drone strike prompts warning</a></h2>
                     </div>
                     <div class="para">
                         <span>
@@ -505,13 +505,13 @@
         </div>
         <div class="navbar">
             <ul class="ull">
-                <li class="listt"><a href="">Home</a></li>
-                <li class="listt"><a href="">News</a></li>
+                <li class="listt"><a href="./index.html">Home</a></li>
+                <li class="listt"><a href="/News/index.html">News</a></li>
                 <li class="listt"><a href="">Sports</a></li>
                 <li class="listt"><a href="">Bussiness</a></li>
                 <li class="listt"><a href="">Innovation</a></li>
                 <li class="listt"><a href="">Culture</a></li>
-                <li class="listt"><a href="">Travel</a></li>
+                <li class="listt"><a href="/travel/index.html">Travel</a></li>
                 <li class="listt"><a href="">Earth</a></li>
                 <li class="listt"><a href="">Video</a></li>
                 <li class="listt"><a href="">Live</a></li>
