--- a/news1/index.html
+++ b/news1/index.html
@@ -30,13 +30,13 @@
         </header>
         <nav class="navbar">
             <ul class="ul">
-                <li class="list"><a href="./home.html" class="home">Home</a></li>
-                <li class="list"><a href="">News</a></li>
+                <li class="list"><a href="./index.html" class="home">Home</a></li>
+                <li class="list"><a href="/News/index.html">News</a></li>
                 <li class="list"><a href="">Sports</a></li>
                 <li class="list"><a href="">Bussiness</a></li>
                 <li class="list"><a href="">Innovation</a></li>
                 <li class="list"><a href="">Culture</a></li>
-                <li class="list"><a href="">Travel</a></li>
+                <li class="list"><a href="/travel/index.html">Travel</a></li>
                 <li class="list"><a href="">Earth</a></li>
                 <li class="list"><a href="" class="video">Video</a></li>
                 <li class="list"><a href="">Live</a></li>
@@ -584,13 +584,13 @@
         </div>
         <div class="navbar">
             <ul class="ull">
-                <li class="listt"><a href="">Home</a></li>
-                <li class="listt"><a href="">News</a></li>
+                <li class="listt"><a href="./index.html">Home</a></li>
+                <li class="listt"><a href="/News/index.html">News</a></li>
                 <li class="listt"><a href="">Sports</a></li>
                 <li class="listt"><a href="">Bussiness</a></li>
                 <li class="listt"><a href="">Innovation</a></li>
                 <li class="listt"><a href="">Culture</a></li>
-                <li class="listt"><a href="">Travel</a></li>
+                <li class="listt"><a href="/travel/index.html">Travel</a></li>
                 <li class="listt"><a href="">Earth</a></li>
                 <li class="listt"><a href="">Video</a></li>
                 <li class="listt"><a href="">Live</a></li>
