--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBC News Clone</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -63,19 +64,353 @@
     </section>
 
     <!-- Made by reeta -->
-
-    <section>
-        <!-- This is section 13 -->
-    </section>
-    <section>
-        <!-- This is section 14 -->
-    </section>
-    <section>
-        <!-- This is section 15 -->
-    </section>
-    <section>
-        <!-- This is section 16 -->
-    </section>
+    <div class="first"> </div>
+    <div class="one">
+        <h1>World of Wonder</h1>
+    </div>
+    <div class="star">
+        <div class="two">
+            <img class="photo" src="./image/my1.webp" alt="image">
+            <h1 class="two1">How a fictitious 'sea' became a<br> top attraction</h1><br>
+            <p style="font-size: 20px; color:white;">The Maldives' famous Sea of Stars is<br> part fact, part fiction-but that just<br> adds to the mystery of one of the<br> country's top tourist attractions</p>
+            <br><span class="go1">8 days ago</span><span>Travel</span><br><br> 
+            <hr>  
+        </div>
+        <div class="two5">
+            <img class="photo" src="./image/image2.webp" alt="image">
+            <h1 class="two1">Where to see spring tulips in <br>the Netherlands</h1><br>
+            <p style="font-size: 20px; color:white;">Nienke Panis-Ringersma has made a<br> career out of following the region's <br>famous blooms. Here are her favourite <br>ways to experience the season, from<br> road trips to bulb picking.</p>
+            <br><span class="go1">31 Mar 2024</span><span>Travel</span><br><br> 
+            <hr>  
+        </div>
+        <div>
+            <div class="two5">
+                <img class="photo" src="./image/image3.webp" alt="image">
+                <h1 class="two1">Botswana's inspirational<br> women safari guides navigating<br> change</h1><br>
+                <p style="font-size: 20px;color:white;">A remarkable shift is reshaping the<br> traditional landscape of piloting iconic<br> canoes in one of Africa's most <br>extraordinary places - a role that has<br> long been the domain of men.</p>
+                <br><span class="go1">19 Mar 2024</span><span>Travel</span><br><br> 
+                <hr>  
+            </div>
+        </div>
+        <div>
+            <div class="two5">
+                <img class="photo" src="./image/image4.webp" alt="image">
+                <h1 class="two1">Photos from the deep sea show '<br>exciting' new species</h1><br>
+                <p style="font-size: 20px;color:white;">Scientists exploring the ocean off the<br> New Zealand coast believe they have <br>discovered 100 new marine species.</p>
+                <br><span class="go1">14 Mar 2024</span><span>Natural wonders</span><br> <br> 
+                <hr>  
+            </div>
+        </div>
+    </div>
+    <div class="first1"> </div>
+    <div class="second1">
+        <div class="second">
+            <h1>Sign up for newsletters</h1>
+            <img class="photo1" src="./image/image6.jpeg" alt="image">
+            <h1 class="nam">US Election Unspun</h1>
+            <p class="num">Cut through the spin with North America correspondent Anthony Zurcher - in your inbox<br> every Wednesday.</p><br>
+            <hr>
+        </div>
+        <div class="second4">
+            <img class="photo2" src="./image/image7.webp" alt="image">
+            <h1 class="nam">In History</h1>
+            <p class="num">Discover the headlines from this week in history. See the past come to life through the BBC's unique archive, in your inbox every Thursday.
+            </p><br>
+            <hr><br><br><br>
+        </div>
+    </div>
+    <div class="num3">
+        <img src="./image/image8 copy.jpeg" alt="image"><br>
+    </div>
+    <div>
+        <div class="first10"> </div>
+    </div>
+    <h2 class="the0" >US and Canada news</h2>
+    <div class="the1">
+        <div class="the">
+            <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
+            <span class="go">7hrsago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">How gang violence gripped<br> a tourist haven</h3><br>
+            <span class="go">10 hrs ago</span><span>Latin America & Caribbean</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The billionaire facing death<br> over $44bn bank fraud</h3><br>
+            <span class="go">10 hrs ago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The Indian men<br> traumatised by fighting for<br> Russia</h3><br>
+            <span class="go">13 hrs ago</span><span>NEWS India</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
+            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+        </div>
+    </div>
+    <div>
+        <div class="first10"> </div>
+    </div>
+    <h2 class="the0" >UK news</h2>
+    <div class="the1">
+        <div class="the">
+            <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
+            <span class="go">7hrsago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">How gang violence gripped<br> a tourist haven</h3><br>
+            <span class="go">10 hrs ago</span><span>Latin America & Caribbean</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The billionaire facing death<br> over $44bn bank fraud</h3><br>
+            <span class="go">10 hrs ago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The Indian men<br> traumatised by fighting for<br> Russia</h3><br>
+            <span class="go">13 hrs ago</span><span>NEWS India</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
+            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+        </div>
+    </div>
+    <div>
+        <div class="first10"> </div>
+    </div>
+    <h2 class="the0" >Business</h2>
+    <div class="the1">
+        <div class="the">
+            <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
+            <span class="go">7hrsago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">How gang violence gripped<br> a tourist haven</h3><br>
+            <span class="go">10 hrs ago</span><span>Latin America & Caribbean</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The billionaire facing death<br> over $44bn bank fraud</h3><br>
+            <span class="go">10 hrs ago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The Indian men<br> traumatised by fighting for<br> Russia</h3><br>
+            <span class="go">13 hrs ago</span><span>NEWS India</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
+            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+        </div>
+    </div>
+    <div>
+        <div class="first10"> </div>
+    </div>
+    <h2 class="the0" >Business</h2>
+    <div class="the1">
+        <div class="the">
+            <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
+            <span class="go">7hrsago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">How gang violence gripped<br> a tourist haven</h3><br>
+            <span class="go">10 hrs ago</span><span>Latin America & Caribbean</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The billionaire facing death<br> over $44bn bank fraud</h3><br>
+            <span class="go">10 hrs ago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The Indian men<br> traumatised by fighting for<br> Russia</h3><br>
+            <span class="go">13 hrs ago</span><span>NEWS India</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
+            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+        </div>
+    </div>
+    <div>
+        <div class="first10"> </div>
+    </div>
+    <h2 class="the0" >Culture</h2>
+    <div class="the1">
+        <div class="the">
+            <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
+            <span class="go">7hrsago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">How gang violence gripped<br> a tourist haven</h3><br>
+            <span class="go">10 hrs ago</span><span>Latin America & Caribbean</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The billionaire facing death<br> over $44bn bank fraud</h3><br>
+            <span class="go">10 hrs ago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The Indian men<br> traumatised by fighting for<br> Russia</h3><br>
+            <span class="go">13 hrs ago</span><span>NEWS India</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
+            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+        </div>
+    </div>
+    <div>
+        <div class="first10"> </div>
+    </div>
+    <h2 class="the0" >Sport</h2>
+    <div class="the1">
+        <div class="the">
+            <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
+            <span class="go">7hrsago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">How gang violence gripped<br> a tourist haven</h3><br>
+            <span class="go">10 hrs ago</span><span>Latin America & Caribbean</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The billionaire facing death<br> over $44bn bank fraud</h3><br>
+            <span class="go">10 hrs ago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The Indian men<br> traumatised by fighting for<br> Russia</h3><br>
+            <span class="go">13 hrs ago</span><span>NEWS India</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
+            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+        </div>
+    </div>
+    <div class="num3">
+        <img src="./image/image8 copy.jpeg" alt="image"><br>
+    </div>
+    <div>
+        <div class="first10"> </div>
+    </div>
+    <h2 class="the0" >Climate solutions</h2>
+    <div class="the1">
+        <div class="the">
+            <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
+            <span class="go">7hrsago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">How gang violence gripped<br> a tourist haven</h3><br>
+            <span class="go">10 hrs ago</span><span>Latin America & Caribbean</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The billionaire facing death<br> over $44bn bank fraud</h3><br>
+            <span class="go">10 hrs ago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The Indian men<br> traumatised by fighting for<br> Russia</h3><br>
+            <span class="go">13 hrs ago</span><span>NEWS India</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
+            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+        </div>
+    </div>
+    <div>
+        <div class="first10"> </div>
+    </div>
+    <h2 class="the0" >Technology</h2>
+    <div class="the1">
+        <div class="the">
+            <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
+            <span class="go">7hrsago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">How gang violence gripped<br> a tourist haven</h3><br>
+            <span class="go">10 hrs ago</span><span>Latin America & Caribbean</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The billionaire facing death<br> over $44bn bank fraud</h3><br>
+            <span class="go">10 hrs ago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The Indian men<br> traumatised by fighting for<br> Russia</h3><br>
+            <span class="go">13 hrs ago</span><span>NEWS India</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
+            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+        </div>
+    </div>
+    <div>
+        <div class="first10"> </div>
+    </div>
+    <h2 class="the0" >Science and health</h2>
+    <div class="the1">
+        <div class="the">
+            <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
+            <span class="go">7hrsago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">How gang violence gripped<br> a tourist haven</h3><br>
+            <span class="go">10 hrs ago</span><span>Latin America & Caribbean</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The billionaire facing death<br> over $44bn bank fraud</h3><br>
+            <span class="go">10 hrs ago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The Indian men<br> traumatised by fighting for<br> Russia</h3><br>
+            <span class="go">13 hrs ago</span><span>NEWS India</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
+            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+        </div>
+    </div>
+    <div>
+        <div class="first10"> </div>
+    </div>
+    <h2 class="the0" >World's Table</h2>
+    <div class="the1">
+        <div class="the">
+            <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
+            <span class="go">7hrsago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">How gang violence gripped<br> a tourist haven</h3><br>
+            <span class="go">10 hrs ago</span><span>Latin America & Caribbean</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The billionaire facing death<br> over $44bn bank fraud</h3><br>
+            <span class="go">10 hrs ago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The Indian men<br> traumatised by fighting for<br> Russia</h3><br>
+            <span class="go">13 hrs ago</span><span>NEWS India</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
+            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+        </div>
+    </div>
+    <div>
+        <div class="first10"> </div>
+    </div>
+    <h2 class="the0" >Travel</h2>
+    <div class="the1">
+        <div class="the">
+            <h3 class="the10">South Korea's ruling party<br>suffers crushing defeat</h3><br>
+            <span class="go">7hrsago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">How gang violence gripped<br> a tourist haven</h3><br>
+            <span class="go">10 hrs ago</span><span>Latin America & Caribbean</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The billionaire facing death<br> over $44bn bank fraud</h3><br>
+            <span class="go">10 hrs ago</span><span>NEWS Asia</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">The Indian men<br> traumatised by fighting for<br> Russia</h3><br>
+            <span class="go">13 hrs ago</span><span>NEWS India</span><br>
+        </div>
+        <div class="the">
+            <h3 class="the10">Why we have co-evolved<br> with technology</h3><br>
+            <span class="go">5 days ago</span><span>NEWS  Future</span><br>
+        </div>
+    </div>
 
     <!-- Made by Saloni -->
     
