--- a/travel/index.html
+++ b/travel/index.html
@@ -920,7 +920,7 @@
             </div>
     </section>
     <!-- green getways -->
-    <div class="main">
+    <div class="main1">
         <section class="green-getway">
             <hr class="hr6">
             <div class="green-headding">
