--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                     <img src="https://ichef.bbci.co.uk/ace/standard/1536/cpsprodpb/12897/production/_132972957_gettyimages-1134057045.jpg.webp"
                         alt="img-1" width="298" height="167">
                     <div class="heading_s">
-                        <h2 class="center_cap"><a href="/news1/index.html">Millions prepare for total solar eclipse in North
+                        <h2 class="center_cap"><a href="/news1/index.html">Millions prepare for total solar eclipse in
+                                North
                                 America
                             </a></h2>
                     </div>
@@ -71,7 +72,8 @@
                     <img src="https://ichef.bbci.co.uk/news/480/cpsprodpb/3A97/production/_133099941_gettyimages-2147328267.jpg.webp"
                         alt="img-2" width="298" height="167">
                     <div class="heading_s">
-                        <h2 class="center_cap"><a href="./news2/index.html">Ukraine nuclear plant drone strike prompts warning</a></h2>
+                        <h2 class="center_cap"><a href="./news2/index.html">Ukraine nuclear plant drone strike prompts
+                                warning</a></h2>
                     </div>
                     <div class="para">
                         <span>
@@ -325,7 +327,7 @@
                     <i class="fa-solid fa-play"></i>
                 </div>
                 <div class="heading_s fr">
-                    <h2 class="center_cap"><a href="">Parthenogenesis: Why some species experience 'virgin births'
+                    <h2 class="center_cap"><a href="">Parthenogenesis:species experience 'virgin births'
                         </a></h2>
                 </div>
                 <div class="para fr">
@@ -410,8 +412,9 @@
         <div class="watch_sec">
             <div class="news_1 last">
                 <div class="heading_s">
-                    <h2 class="center_cap"> <i class="fa-solid fa-play"></i> <a href="">Ukraine nuclear plant drone
-                            strike prompts warning</a></h2>
+                    <h2 class="center_cap"> <i class="fa-solid fa-play"></i> <a href="">Shouts of 'shame' as Arizona
+                            lawmakers spar on abortion
+                        </a></h2>
                 </div>
                 <div class="time">
                     <span>11 hrs ago | <b style="color: black;">NEWS</b> Europe</span>
@@ -419,8 +422,8 @@
             </div>
             <div class="news_1 last">
                 <div class="heading_s">
-                    <h2 class="center_cap"> <i class="fa-solid fa-play"></i> <a href="">Ukraine nuclear plant drone
-                            strike prompts warning</a></h2>
+                    <h2 class="center_cap"> <i class="fa-solid fa-play"></i> <a href="">Rope climber attempts world
+                            record at Eiffel Tower</a></h2>
                 </div>
                 <div class="time">
                     <span>11 hrs ago | <b style="color: black;">NEWS</b> Europe</span>
@@ -428,8 +431,8 @@
             </div>
             <div class="news_1 last">
                 <div class="heading_s">
-                    <h2 class="center_cap"> <i class="fa-solid fa-play"></i> <a href="">Ukraine nuclear plant drone
-                            strike prompts warning</a></h2>
+                    <h2 class="center_cap"> <i class="fa-solid fa-play"></i> <a href="">Guatemala landfill fire declared
+                            a disaster</a></h2>
                 </div>
                 <div class="time">
                     <span>11 hrs ago | <b style="color: black;">NEWS</b> Europe</span>
@@ -437,8 +440,17 @@
             </div>
             <div class="news_1 last">
                 <div class="heading_s">
-                    <h2 class="center_cap"><i class="fa-solid fa-play"></i> <a href="">Ukraine nuclear plant drone
-                            strike prompts warning</a></h2>
+                    <h2 class="center_cap"><i class="fa-solid fa-play"></i> <a href="">Skydivers witness total solar
+                            eclipse mid-air</a></h2>
+                </div>
+                <div class="time">
+                    <span>11 hrs ago | <b style="color: black;">NEWS</b> Europe</span>
+                </div>
+            </div>
+            <div class="news_1 last">
+                <div class="heading_s">
+                    <h2 class="center_cap"><i class="fa-solid fa-play"></i> <a href="">Floods and tornadoes cause damage
+                            in US Gulf states</a></h2>
                 </div>
                 <div class="time">
                     <span>11 hrs ago | <b style="color: black;">NEWS</b> Europe</span>
