--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBC News Clone</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -34,18 +35,43 @@
     
     <!-- made by monika -->
 
-    <section>
-        <!-- This is section 5 -->
-    </section>
-    <section>
-        <!-- This is section 6 -->
-    </section>
-    <section>
-        <!-- This is section 7 -->
-    </section>
-    <section>
-        <!-- This is section 8 -->
-    </section>
+    <div class="culture">
+        <div class="">
+            <p>Culture</p>
+        </div>
+        <div class="in-culture-1">
+            <div>
+                <h3>Alexei Navalny's memoir to <br>be published in October</h3><br>
+                <p>The anti-corruption campaigner began work on his book <br>while recovering from his 2020 poisoning.</p><br><br>
+                <p class="see-more">See more</p>
+            </div>
+            <div>
+                <img src="https://ichef.bbci.co.uk/news/1024/cpsprodpb/F886/production/_133122636_mediaitem133122632.jpg.webp" alt="Alexei">
+            </div>
+        </div>
+        <div class="in-culture-2">
+            <div>
+                <h3>JK Rowling reignites row <br>with Harry Potter starts</h2><br>
+                <p><span style="opacity: 0.7;">19 hrs ago</span><span style="font-weight: bold;">| NEWS </span><span style="opacity: 0.7;">Entertainment & Arts</span></p>
+            </div>
+            <div>
+                <h3>Taylor Swift's music <br>returns to TikTok</h2><br>
+                <p><span style="opacity: 0.7;">10 hrs ago</span><span style="font-weight: bold;">| NEWS</span><span style="opacity: 0.7;">Entertainment & Arts</span></p>
+            </div>
+            <div>
+                <h3>Civil War's warning about <br>the US political divide</h2><br>
+                <p><span style="opacity: 0.7;">16 hrs ago | Culture</span></p>
+            </div>
+            <div>
+                <h3>Stars say Fallout TV show <br>brought games to life</h2><br>
+                <p><span style="opacity: 0.7;">16 hrs ago</span><span style="font-weight: bold;">| NEWS</span><span style="opacity: 0.7;">Newsbeat</span></p>
+            </div>
+            <div>
+                <h3>Margot Robbie's company <br>to produce Monopoly film</h2><br>
+                <p><span style="opacity: 0.7;">1 day ago</span><span style="font-weight: bold;">| NEWS</span><span style="opacity: 0.7;">Entertainment & Arts</span></p>
+            </div>
+        </div>
+    </div>
 
     <!-- Made by Radhika -->
 
