--- a/travel/index.html
+++ b/travel/index.html
@@ -19,7 +19,7 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <div class="bbc-logo">
-                <img src="https://th.bing.com/th/id/R.305ba4ba6a7380328398958f7d5dd549?rik=pOrCh%2bWR2atAyg&riu=http%3a%2f%2fatticacommunications.com%2fwp-content%2fuploads%2f2019%2f04%2fbbc-logo-png-transparent.png&ehk=0mdyVI15jsEbzMTHIuGzo2aGb1CYLRCzZcuurmDwd7I%3d&risl=&pid=ImgRaw&r=0"
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS28VrPAYkX2yJ3cU5CBiFd5bZV9hWkrha16Gsq4G1HsfCpzv0xQr6HmPKaEmStJ3MODTU&usqp=CAU  "
                     alt="bbc_logo">
             </div>
             <div class="button">
@@ -463,7 +463,31 @@
                 </div>
             </div>
         </section>
-        <section class="box-5">
+        <section class="box">
+            <div class="image-container">
+                <div>
+                    <hr>
+                    <div class="Pictures-hradding">
+                        <h2>
+                            In Pictures
+                        </h2>
+                    </div>
+                </div>
+                <img class="image" src="https://ichef.bbci.co.uk/images/ic/1376x774/p0hltwm6.jpg.webp" alt="">
+                <div class="content-box">
+                    <a href="">
+                        <h2>
+                            The Middle East's once-inaccessible ancient wonder <br> world a greener place
+                        </h2>
+                    </a>
+                    <p>
+                        Set in the AlUla Valley, this ancient desert oasis has birthed flourishing civilisations. Now,
+                        after years of being closed to outsiders, it's starting to reveal its secrets.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- <section class="box-5">
             <div class="picture-content">
                 <hr class="hr3">
                 <div class="pictures">
@@ -484,7 +508,7 @@
                     </p>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section class="box-6">
             <div class="specialist">
                 <hr class="hr4">
@@ -1043,122 +1067,90 @@
             </div>
         </section>
         <!-- worls's table -->
-        <section class="worlds-table">
-            <div class="table">
-                <hr class="hr7">
-                <div class="table-headding">
+
+        
+        <section class="WorldTable">
+            <div class="WorldTable-container">
+                <hr>
+                <div class="WorldTable-headding">
                     <h2>World's Table</h2>
                 </div>
-                <div class="table-container">
-                    <!-- table image box 1 -->
-                    <div class="table-image">
-                        <img class="img" src="https://ichef.bbci.co.uk/images/ic/480x270/p0hmm438.jpg.webp" alt="">
-                        <div class="table-text">
-                            <div class="table-text1">
-                                <h2>
-                                    China's sweet dumpling to remember the dead
-                                </h2>
+                <div class="table-news">
+                    <div class="WorldTable-image">
+                        <!-- World's Table box 1  -->
+                        <div class="WorldTable-first">
+                            <div class="table-image">
+                                <img src="https://ichef.bbci.co.uk/images/ic/480x270/p0hncpkj.jpg.webp" alt="">
                             </div>
-                            <div class="table-para">
-                                <p>
-                                    China's qingtuan is a sweet, jade-coloured treat eaten to commemorate the dead
-                                    during spring's Qingming Festival, or Tomb Sweeping Day.
-                                </p>
-                            </div>
-                            <div class="table-time">
-                                <span>
-                                    4 days ago
-                                </span>
-                                <div>
-                                    |
+                            <div class="text-container">
+                                <div class="WorldTable-text">
+                                    <h2>The most beautiful cake for Ramadan</h2>
+                                    <p>Kek lapis is a sublime art form, involving numerous colours and flavours commingling into an oh-so-soft and delicious cake that hides a kaleidoscope of intricate geometric patterns.</p>
                                 </div>
-                                <span>
-                                    Travel
-                                </span>
+                                <div class="WorldTable-time">
+                                    <span>6 days ago</span>
+                                    <div>|</div>
+                                    <span>Travel</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- table image box 2 -->
-                    <div class="table-image">
-                        <img class="img" src="https://ichef.bbci.co.uk/images/ic/480x270/p0hmcrw1.jpg.webp" alt="">
-                        <div class="table-text">
-                            <div class="table-text1">
-                                <h2>
-                                    The 'calorie-bomb' avocado smoothie for Ramadan
-                                </h2>
+                         <!-- World's Table box 2  -->
+                        <div class="WorldTable-first">
+                            <div class="table-image">
+                                <img src="https://ichef.bbci.co.uk/images/ic/480x270/p0hmm438.jpg.webp" alt="">
                             </div>
-                            <div class="table-para">
-                                <p>
-                                    Moroccan ZaaZaa is a thick and sweet avocado smoothie that resembles a layered
-                                    sundae and satisfies as a post-fasting treat during Ramadan. </p>
-                            </div>
-                            <div class="table-time">
-                                <span>
-                                    7 days ago
-                                </span>
-                                <div>
-                                    |
+                            <div class="text-container">
+                                <div class="WorldTable-text">
+                                    <h2>China's sweet dumpling to remember the dead</h2>
+                                    <p>
+                                        China's qingtuan is a sweet, jade-coloured treat eaten to commemorate the dead during spring's Qingming Festival, or Tomb Sweeping Day.
+                                    </p>
                                 </div>
-                                <span>
-                                    Travel
-                                </span>
+                                <div class="WorldTable-time">
+                                    <span>4 Apr 2024</span>
+                                    <div>|</div>
+                                    <span>Travel</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- table image box3 -->
-                    <div class="table-image">
-                        <img class="img" src="https://ichef.bbci.co.uk/images/ic/480x270/p0hmrkqd.jpg.webp" alt="">
-                        <div class="table-text">
-                            <div class="table-text1">
-                                <h2>
-                                    The Jamaican answer to the hot cross bun
-                                </h2>
+                         <!-- World's Table box 3-->
+                        <div class="WorldTable-first">
+                            <div class="table-image">
+                                <img src="https://ichef.bbci.co.uk/images/ic/480x270/p0hmcrw1.jpg.webp" alt="">
                             </div>
-                            <div class="table-para">
-                                <p>
-                                    During Easter, soft cheese sandwiched between two slices of moist, fruit-infused
-                                    spiced bun make up a savoury-sweet Jamaican tradition
-                                </p>
-                            </div>
-                            <div class="table-time">
-                                <span>
-                                    30 March 2024
-                                </span>
-                                <div>
-                                    |
+                            <div class="text-container">
+                                <div class="WorldTable-text">
+                                    <h2>The 'calorie-bomb' avocado smoothie for Ramadan</h2>
+                                    <p>
+                                        Moroccan ZaaZaa is a thick and sweet avocado smoothie that resembles a layered sundae and satisfies as a post-fasting treat during Ramadan.
+                                    </p>
                                 </div>
-                                <span>
-                                    Travel
-                                </span>
+                                <div class="WorldTable-time">
+                                    <span>1 Apr 2024</span>
+                                    <div>|</div>
+                                    <span>Travel</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- table image box 4 -->
-                    <div class="table-image">
-                        <img class="img" src="https://ichef.bbci.co.uk/images/ic/480x270/p0hm1sr6.jpg.webp" alt="">
-                        <div class="table-text">
-                            <div class="table-text1">
-                                <h2>
-                                    The recipe for a centuries-old Easter baba made with 96 eggs
-                                </h2>
+                         <!-- World's Table box 4-->
+                        <div class="WorldTable-first">
+                            <div class="table-image">
+                                <img src="https://ichef.bbci.co.uk/images/ic/480x270/p0hmrkqd.jpg.webp" alt="">
                             </div>
-                            <div class="table-para">
-                                <p>
-                                    The baba is often served at Easter in Poland, with the most extraordinary version –
-                                    the muslin baba – made from a rich dough of flour, yeast, butter and quite a lot of
-                                    egg yolks.
-                                </p>
-                            </div>
-                            <div class="table-time">
-                                <span>
-                                    27 March 2024
-                                </span>
-                                <div>
-                                    |
+                            <div class="text-container">
+                                <div class="WorldTable-text">
+                                    <h2>
+                                        The Jamaican answer to the hot cross bun
+                                    </h2>
+                                    <p>
+                                        During Easter, soft cheese sandwiched between two slices of moist, fruit-infused spiced bun make up a savoury-sweet Jamaican tradition. 
+                                    </p>
                                 </div>
-                                <span>
-                                    Travel
-                                </span>
+                                <div class="WorldTable-time">
+                                    <span>30 Mar 2024</span>
+                                    <div>|</div>
+                                    <span>Travel</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -1193,7 +1185,7 @@
                 </div>
                 <div class="travel-headline">
                     <p>
-                        <b>NEWS</b> Wales
+                        <b> NEWS </b> Wales
                     </p>
                     <hr>
                 </div>
